# mcpp-unique-any

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  macos.yml  ubuntu.yml  windows.yml
include/mcpp/: inplace_any_view.hpp  inplace_unique_any.hpp  unique_any.hpp
tests/: CMakeLists.txt  alloc.cpp  alloc.hpp  inplace_any_view.cpp  inplace_unique_any.cpp  unique_any.cpp
